tweak hero-text width to avoid h1 wrapping

--- a/style.css
+++ b/style.css
@@ -372,7 +372,7 @@ footer button:focus {
     }
 
     .hero-container {
-        grid-template-columns:500px 1fr;
+        grid-template-columns:600px 1fr;
     }
 
     .text-section h1 {
